--- a/client/src/containers/customerAccess/index.css
+++ b/client/src/containers/customerAccess/index.css
@@ -1,12 +1,11 @@
 .form {
   background: transparent;
-  padding: 40px;
   max-width: 45em;
-  margin: 40px auto;
+  margin: 1em auto;
   border-radius: 4em;
 }
 
-.tab-group {
+/* .tab-group {
   border-radius: 4em;
   list-style: none;
   padding: 0;
@@ -45,4 +44,4 @@
   background: #1ab188;
   border-radius: 4em;
   color: #ffffff;
-}
+} */
