Task Completed and Signup + Login for Worker and Clinet completed

--- a/client/src/containers/customerAccess/index.css
+++ b/client/src/containers/customerAccess/index.css
@@ -4,8 +4,8 @@
   margin: 1em auto;
   border-radius: 4em;
 }
-
-/* .tab-group {
+/* 
+.tab-group {
   border-radius: 4em;
   list-style: none;
   padding: 0;
