--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
-html {
+body {
   background-image: linear-gradient(to top, #3a6073, #16222a);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
+  width: 100%;
+  height: 100%;
 }
 
 /* 
